--- a/achievements.html
+++ b/achievements.html
@@ -155,7 +155,7 @@
 
 
   <main class="achievements-page">
-    <h1>Achievements</h1>
+    <h1>Certifications</h1>
 
     <!-- December 2025 -->
     <section class="month-section">
