--- a/resume.html
+++ b/resume.html
@@ -2,84 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Resume</title>
+  <title>Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- PDF.js CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* Page reset */
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background-image: url("background2.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
-
-    /* Fixed resume header (download only) */
-    .resume-header {
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      height: 56px;
-      background-color: #ffffff;
-      border-bottom: 1px solid #e0e0e0;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      padding: 0 16px;
-      z-index: 40;
-    }
-
-    .download-btn {
-      text-decoration: none;
-      font-size: 14px;
-      padding: 8px 14px;
-      border: 1px solid #000;
-      color: #000;
-      background-color: transparent;
-      border-radius: 4px;
-    }
-
-    /* Main container */
-    .resume-container {
-      position: absolute;
-      top: 56px;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      overflow: hidden;
-    }
-
-    /* PDF wrapper */
-    .resume-frame-wrapper {
-      width: 100%;
-      max-width: 900px;
-      height: 100%;
-      background-color: #ffffff;
+    body.resume-page {
       overflow-y: auto;
-      padding: 24px 0;
     }
 
-    canvas {
-      display: block;
-      margin: 0 auto 24px auto;
+    main.resume-page {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 160px 20px 120px;
     }
 
-    @media (max-width: 768px) {
-      .resume-frame-wrapper {
-        max-width: 100%;
+    /* =========================
+       HEADER
+       ========================= */
+
+    .experience-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 24px;
+      margin-bottom: 56px;
+      flex-wrap: wrap;
+    }
+
+    .experience-header h1 {
+      font-size: 42px;
+      color: #4a3b78;
+      margin-bottom: 8px;
+    }
+
+    .experience-header p {
+      font-size: 16px;
+      color: #5b4b8a;
+      max-width: 520px;
+    }
+
+    .cv-buttons {
+      display: flex;
+      gap: 12px;
+    }
+
+    .cv-button {
+      padding: 10px 18px;
+      border-radius: 999px;
+      font-size: 14px;
+      font-weight: 600;
+      text-decoration: none;
+      border: 1px solid rgba(91, 75, 138, 0.35);
+      color: #4a3b78;
+      background: rgba(255,255,255,0.9);
+    }
+
+    .cv-button.primary {
+      background: #6b6df6;
+      color: #ffffff;
+      border: none;
+    }
+
+    /* =========================
+       EXPERIENCE CARD
+       ========================= */
+
+    .experience-card {
+      background: rgba(255,255,255,0.95);
+      border: 1px solid rgba(91, 75, 138, 0.22);
+      border-radius: 18px;
+      padding: 36px 40px;
+      margin-bottom: 40px;
+      box-shadow: 0 18px 36px rgba(0,0,0,0.08);
+    }
+
+    .experience-role {
+      font-size: 20px;
+      font-weight: 600;
+      color: #000;
+      margin-bottom: 6px;
+    }
+
+    .experience-meta {
+      font-size: 14px;
+      color: #5b4b8a;
+      margin-bottom: 18px;
+    }
+
+    .experience-points ul {
+      padding-left: 18px;
+    }
+
+    .experience-points li {
+      font-size: 15px;
+      color: #000;
+      margin-bottom: 10px;
+      line-height: 1.5;
+    }
+
+    /* =========================
+       MOBILE
+       ========================= */
+
+    @media (max-width: 900px) {
+      main.resume-page {
+        padding: 120px 16px 96px;
+      }
+
+      .experience-header h1 {
+        font-size: 30px;
+      }
+
+      .experience-card {
+        padding: 26px 24px;
+      }
+
+      .cv-buttons {
+        width: 100%;
       }
     }
   </style>
@@ -93,21 +134,20 @@
   <aside class="mobile-menu" id="mobileMenu">
     <button class="close" id="closeMenu">×</button>
     <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="achievements.html">Achievements</a>
-    <a href="contact.html">Contact</a>
+    <a href="skills.html">Skills</a>
+    <a href="portfolio.html">Projects</a>
+    <a href="achievements.html">Certifications</a>
+    <a href="resume.html">Experience</a>
+    <a href="education.html">Education</a>
   </aside>
 
   <!-- Desktop nav -->
   <nav class="desktop-nav">
     <div class="nav-inner">
-
       <div class="nav-left">
         <span class="nav-name">Kavitha Lingarajegowda</span>
         <span class="nav-role">Software & AI Engineer</span>
       </div>
-
       <div class="nav-right">
         <a href="index.html">Home</a>
         <a href="skills.html">Skills</a>
@@ -116,70 +156,86 @@
         <a href="resume.html">Experience</a>
         <a href="education.html">Education</a>
       </div>
-
-
     </div>
   </nav>
 
+  <!-- =========================
+       EXPERIENCE CONTENT
+       ========================= -->
 
-  <!-- Resume header -->
-  <div class="resume-header">
-    <a
-      href="Kavitha_Lingarajegowda_Resume_2026.pdf"
-      class="download-btn"
-      download
-    >
-      Download
-    </a>
-  </div>
+  <main class="resume-page">
 
-  <!-- Resume viewer -->
-  <div class="resume-container">
-    <div class="resume-frame-wrapper" id="pdf-container">
-      <!-- PDF pages render here -->
-    </div>
-  </div>
+    <header class="experience-header">
+      <div>
+        <h1>Experience</h1>
+        <p>
+          Professional experience spanning applied AI research,
+          agentic systems, and production-grade software engineering.
+        </p>
+      </div>
 
-  <script>
-    const url = "Kavitha_Lingarajegowda_Resume_2026.pdf";
+      <div class="cv-buttons">
+        <a class="cv-button" href="Kavitha_Lingarajegowda_Resume.pdf" target="_blank">View CV</a>
+        <a class="cv-button primary" href="Kavitha_Lingarajegowda_Resume.pdf" download>Download CV</a>
+      </div>
+    </header>
 
-    pdfjsLib.GlobalWorkerOptions.workerSrc =
-      "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+    <!-- MASTER'S THESIS -->
+    <section class="experience-card">
+      <div class="experience-role">Master’s Thesis — LLM-Based Grading & Feedback Systems</div>
+      <div class="experience-meta">
+        Chemnitz University of Technology, Germany · Oct 2025 – Mar 2026 (Current)
+      </div>
 
-    const container = document.getElementById("pdf-container");
+      <div class="experience-points">
+        <ul>
+          <li>Built an end-to-end Python-based LLM grading and feedback system for 300+ real exam responses, replacing manual evaluation workflows.</li>
+          <li>Achieved ~96% exact agreement with human graders on structured exam tasks, demonstrating consistent and scalable evaluation behavior.</li>
+          <li>Engineered agent-driven evaluation pipelines with fully deterministic outputs, ensuring reproducible and auditable results.</li>
+          <li>Implemented Retrieval-Augmented Generation using lecture materials and rubrics to ground model reasoning and reduce ambiguity.</li>
+        </ul>
+      </div>
+    </section>
 
-    pdfjsLib.getDocument(url).promise.then(pdf => {
-      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
-        pdf.getPage(pageNum).then(page => {
+    <!-- RESEARCH INTERNSHIP -->
+    <section class="experience-card">
+      <div class="experience-role">AI / LLM Research Intern</div>
+      <div class="experience-meta">
+        Professorship of Media Encoding, Chemnitz University of Technology, Germany · Sep 2024 – Sep 2025
+      </div>
 
-          const containerWidth = container.clientWidth;
-          const unscaledViewport = page.getViewport({ scale: 1 });
-          const scale = containerWidth / unscaledViewport.width;
-          const outputScale = window.devicePixelRatio || 1;
+      <div class="experience-points">
+        <ul>
+          <li>Designed Python-based evaluation workflows to analyze LLM behavior on 1000+ real Computer Vision exam responses.</li>
+          <li>Iteratively engineered and validated 12 prompt variants, improving instruction-following accuracy through structured experimentation.</li>
+          <li>Built an evaluation harness combining quantitative metrics and qualitative error analysis to diagnose failure modes.</li>
+          <li>Benchmarked three foundation models by analyzing response patterns and prompt sensitivity to support informed model selection.</li>
+        </ul>
+      </div>
+    </section>
 
-          const viewport = page.getViewport({
-            scale: scale * outputScale
-          });
+    <!-- WORKING STUDENT -->
+    <section class="experience-card">
+      <div class="experience-role">Software Development Working Student</div>
+      <div class="experience-meta">
+        iQuest Technologies, Mysore, India · Oct 2020 – Aug 2022
+      </div>
 
-          const canvas = document.createElement("canvas");
-          const context = canvas.getContext("2d");
+      <div class="experience-points">
+        <ul>
+          <li>Built Python-based data processing and ETL workflows to prepare structured datasets, improving data accuracy by 40%.</li>
+          <li>Debugged and stabilized backend and API-driven modules, reducing recurring pipeline failures by 20%.</li>
+          <li>Collaborated with senior engineers to refine requirements, optimize data paths, and improve system scalability.</li>
+          <li>Supported agile development cycles through testing, validation, and technical documentation.</li>
+        </ul>
+      </div>
+    </section>
 
-          canvas.width = viewport.width;
-          canvas.height = viewport.height;
+  </main>
 
-          canvas.style.width = `${viewport.width / outputScale}px`;
-          canvas.style.height = `${viewport.height / outputScale}px`;
-
-          container.appendChild(canvas);
-
-          page.render({
-            canvasContext: context,
-            viewport: viewport
-          });
-        });
-      }
-    });
-  </script>
+  <!-- =========================
+       MOBILE MENU SCRIPT
+       ========================= -->
 
   <script>
     const hamburger = document.getElementById("hamburger");
